--- a/var/templates/radio/header.html
+++ b/var/templates/radio/header.html
@@ -3,7 +3,7 @@
   <head>    
     <title>Radio freies Krautchan :: <bp:$PAGETITLE/>    
     </title>    
-    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />    
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />    
     <link rel="stylesheet" href="style.css" type="text/css" media="screen,projection" />  
   </head>  
   <body>    
@@ -14,19 +14,19 @@
       <div id="navigation">        
         <ul>             
           <li class='selected'>          
-          <a href="?s=home">&Uuml;bersicht</a>          
+          <a href="/">&Uuml;bersicht</a>          
           </li>          
           <li>          
-          <a href="?s=history">Verlauf</a>          
+          <a href="history.php">Verlauf</a>          
           </li>          
           <li>          
-          <a href="?s=broadcasts">Sendungen</a>          
+          <a href="broadcasts.php">Sendungen</a>          
           </li>          
           <li>          
-          <a href="?s=status">Status</a>          
+          <a href="status.php">Status</a>          
           </li>          
                     <li>          
-          <a href="?s=login">Anmelden</a>          
+          <a href="login.php">Anmelden</a>          
           </li>        
           <li>
 
