--- a/var/templates/radio/register.html
+++ b/var/templates/radio/register.html
@@ -1,5 +1,10 @@
 <bp:include template="header.html" shared_values="true"/>
 
-registrieren D:
+<form>
+<table>
+<tr><td></td></tr>
+</table>
+
+</form>
 
 <bp:include template="footer.html" shared_values="true"/>
