finished reimplementing (hopefully) added registerform

--- a/var/templates/radio/header.html
+++ b/var/templates/radio/header.html
@@ -13,8 +13,8 @@
       </div>      
       <div id="navigation">        
         <ul>             
-          <li class='selected'>          
-          <a href="/">&Uuml;bersicht</a>          
+          <li>          
+          <a href="index.php">&Uuml;bersicht</a>          
           </li>          
           <li>          
           <a href="history.php">Verlauf</a>          
@@ -38,3 +38,4 @@
         </ul>      
       </div>             
       <div id='content'>
+<bp:include template="messages.html" shared_values="true"/>
