--- a/var/templates/radio/register.html
+++ b/var/templates/radio/register.html
@@ -1,10 +1,14 @@
 <bp:include template="header.html" shared_values="true"/>
-
-<form>
+<h2>Registrieren</h2>
+<form method="POST">
 <table>
-<tr><td></td></tr>
+<tr><td>Benutzername</td><td><input name="username" value="<bp:$username/>" /></td></tr>
+<tr><td>Passwort</td><td><input type="password" name="password" /></td></tr>
+<tr><td>Passwort (wdh)</td><td><input type="password" name="password2" /></td></tr>
+<tr><td>Strömpasswort<td><input name="streampassword" value="<bp:$streampassword/>" /></td></tr>
 </table>
-
+<input type="hidden" name="action" value="register" />
+<input type="submit" value="registrieren" />
 </form>
 
 <bp:include template="footer.html" shared_values="true"/>
