--- a/var/templates/radio/sidebar.html
+++ b/var/templates/radio/sidebar.html
@@ -6,12 +6,9 @@
 </bp:foreach></ul></div>
 <div class='infoblock'>
 <h3>Letzten 5 Streamer</h3><ul>
-
-<li><a href='/?u=71504'>wessi</a></li>
-<li><a href='/?u=71503'>Krauti_Mercedes</a></li>
-<li><a href='/?u=71502'>suckup</a></li>
-<li><a href='/?u=71501'>easc</a></li>
-<li><a href='/?u=71500'>noko</a></li>
+<bp:foreach in="sb_streamer" as="streamer" index="id" direct="true">
+<li><a href='/?u=<bp:$streamer[userid]/>'><bp:$streamer[username]/></a></li>
+</bp:foreach>
 </ul>
 <p><em>Insgesamt <bp:$sb_streamercount/> Str&ouml;mbernds!</em></p>
 </div>
