LISTENERCOUNT und include/listenercount.php

--- a/var/templates/radio/header.html
+++ b/var/templates/radio/header.html
@@ -25,14 +25,16 @@
           <li>          
           <a href="status.php">Status</a>          
           </li>          
-                    <li>          
+          <li>          
           <a href="login.php">Anmelden</a>          
           </li>        
           <li>
-
           <a href="register.php">Registrieren</a>
           </li>
-                    <li style="float: right;">
+          <li style="float: right;">
+          <p class="userinfo">LISTENER: <bp:$LISTENERCOUNT/></p>
+          </li>
+          <li style="float: right;">
           <p class="userinfo">User: <bp:$USERNAME/></p>
           </li>
         </ul>      
