See bug #9 for details

--- a/var/templates/radio/header.html
+++ b/var/templates/radio/header.html
@@ -32,7 +32,7 @@
           <a href="register.php">Registrieren</a>
           </li>
           <li style="float: right;">
-          <p class="userinfo">LISTENER: <bp:$LISTENERCOUNT/></p>
+          <p class="userinfo">Listener: <bp:$LISTENERCOUNT/></p>
           </li>
           <li style="float: right;">
           <p class="userinfo">User: <bp:$USERNAME/></p>
