--- a/var/templates/radio/sidebar.html
+++ b/var/templates/radio/sidebar.html
@@ -2,7 +2,7 @@
 <div class='infoblock'>
 <h3>Letzten 10 Songs</h3><ul>
 <bp:foreach in="sb_songlist" as="song" index="id" direct="true">
-<li><bp:$song[artist]/> - <bp:$song[title]/></li>
+<li><bp:$song/></li>
 </bp:foreach></ul></div>
 <div class='infoblock'>
 <h3>Letzten 5 Streamer</h3><ul>
