--- a/var/templates/radio/header.html
+++ b/var/templates/radio/header.html
@@ -4,7 +4,8 @@
     <title>Radio freies Krautchan :: <bp:$PAGETITLE/>    
     </title>    
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />    
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen,projection" />  
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen,projection" /> 
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" /> 
   </head>  
   <body>    
     <div id="container">      
