--- a/var/templates/radio/header.html
+++ b/var/templates/radio/header.html
@@ -14,23 +14,23 @@
       </div>      
       <div id="navigation">        
         <ul>             
-          <li>          
+          <li <bp:if value="section" is="overview">class="selected"</bp:if>>          
           <a href="index.php">&Uuml;bersicht</a>          
           </li>          
-          <li>          
+          <li <bp:if value="section" is="history">class="selected"</bp:if>>          
           <a href="history.php">Verlauf</a>          
           </li>          
-          <li>          
+          <li <bp:if value="section" is="broadcasts">class="selected"</bp:if>>          
           <a href="broadcasts.php">Sendungen</a>          
           </li>          
-          <li>          
+          <li <bp:if value="section" is="status">class="selected"</bp:if>>          
           <a href="status.php">Status</a>          
           </li>
-		  <bp:if value="user_log_in" is="false">
-          <li>          
+		  <bp:if value="user_log_in" is="false" direct="true">
+          <li <bp:if value="section" is="login">class="selected"</bp:if>>          
           <a href="login.php">Anmelden</a>          
           </li>        
-          <li>
+          <li <bp:if value="section" is="register">class="selected"</bp:if>>
           <a href="register.php">Registrieren</a>
           </li>
 		  </bp:if>
