--- a/var/templates/radio/broadcasts.html
+++ b/var/templates/radio/broadcasts.html
@@ -8,7 +8,7 @@
 <tr height="50"><td><bp:$weeknum/></td>
 	<bp:foreach in="week" as="day" index="daynum" direct="true">
 	<td><bp:$day[shows] />
-	<div><bp:$day[]</div>
+	<div><bp:$day[] /></div>
 	</td>
 	</bp:foreach>
 	</tr>
