added sidebar for broadcasts

--- a/var/templates/radio/broadcasts.html
+++ b/var/templates/radio/broadcasts.html
@@ -15,4 +15,5 @@
 	</tr>
 </bp:foreach>
 </table>
+<bp:include template="broadcasts-sb.html" shared_values="true"/>
 <bp:include template="footer.html" shared_values="true"/>
