fixed encoding added missing div-close

--- a/var/templates/radio/broadcasts-sb.html
+++ b/var/templates/radio/broadcasts-sb.html
@@ -1,7 +1,8 @@
+</div>
 <!-- Boradcasts Sidebar -->
 <div id='subcontent'>
 <div class='infoblock'>
-<h3>Die nächsten Sendungen</h3>
+<h3>Die n&auml;chsten Sendungen</h3>
 
 </div>
 <bp:if expr="$user_log_in == 'true'">
