--- a/var/templates/radio/broadcasts-week.html
+++ b/var/templates/radio/broadcasts-week.html
@@ -3,14 +3,14 @@
 <h2>Programmplan</h2>
 Wochenplan
 
-<table width="100%" class="calendar-week" border=1>
+<table width="100%" class="calendar-week" cellspacing=0>
 <tr><td>&nbsp;</td><td width="13%">Montag</td><td width="13%">Dienstag</td><td width="13%">Mittwoch</td><td width="13%">Donnerstag</td><td width="13%">Freitag</td><td width="13%">Samstag</td><td width="13%">Sonntag</td></tr>
 <bp:foreach in="calendar" as="time" index="timenum" direct="true">
-<tr height="50"><td><bp:$timenum /></td>
+<tr height="20"><td><bp:$timenum/></td>
 	<bp:foreach in="time" as="show" index="daynum" direct="true">
-		<bp:if expr="$show['type'] != 'SKIP'" >
-			<td rowspan=<bp:$show[length] />>
-				<bp:$show[name]/>&nbsp;
+		<bp:if expr="$show['type'] != 'SKIP'" direct="true">
+			<td rowspan=<bp:$show[length] /> class="<bp:$show[stat]/>">
+				<bp:$show[name]/>
 			</td>
 		</bp:if>
 	</bp:foreach>
