--- a/var/templates/radionew/sidebar.html
+++ b/var/templates/radionew/sidebar.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
-{% block sidebar%}
+{% block content %}
+block.super
+{% endblock %}
+{% block sidebar %}
 <div id='subcontent'>
 	<div class='infoblock'>
 	<h3>Letzten 10 Songs</h3>
 		<ul>
-		{% for index, song in sb_songs %}
+		{% for index, song in sb_songlist %}
 			<li><span title="{{ song.fullsong }}">{{ song.song }}{% if song.short == 1 %}<a href="/histroy.php?id={{ song.id }}">...</a>{% endif %}</span></li>
 		{% endfor %}
 		</ul></div>
