--- a/var/templates/radionew/login.html
+++ b/var/templates/radionew/login.html
@@ -1,7 +1,7 @@
 {% extends "sidebar.html" %}
 {% block content %}
 <p>
-<form method="POST">
+<form action="user.php" method="POST">
 <table>
 <tr><td>Name</td><td><input name="username" /></td></tr>
 <tr><td>Passwort</td><td><input type="password" name="password"/></td></tr>
