--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -3,7 +3,7 @@
   <head>    
     <title>Radio freies Krautchan :: {{ PAGETITLE }}   
     </title>    
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />    
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="style.css" type="text/css" media="screen,projection" /> 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" /> 
 	<!--<script src="js/prototype.js"></script>-->
@@ -46,8 +46,13 @@
           <p class="userinfo">Listener: {{ listenercount }}</p>
           </li>
 
-          <li style="float: right;">
-          <p class="userinfo">User: {{ username }}</p>
+          <li style="float: right;" {% if section == 'user' %}class="selected" {% endif %}>
+          {% if user_logged_in %}
+          <a href="user.php"><p class="userinfo">User: {{ username }}</a>
+          {% else %}
+          <p class="userinfo">User: {{ username }}
+          {% endif %}
+          </p>
           </li>
         </ul>      
       </div>             
