--- a/var/templates/radionew/sidebar-user.html
+++ b/var/templates/radionew/sidebar-user.html
@@ -8,7 +8,7 @@ block.super
 	<div class='infoblock'>
 	<h3>Einstellungen</h3>
 		<ul>
-			<li>Benutzereinstellungen</li>
+			<li><a href="settings.php">Benutzereinstellungen</a></li>
 			<li>Sendungseinstellungen</li>
 			<!--<li>Statistiken</li>-->
 		</ul>
