--- a/var/templates/radionew/index.html
+++ b/var/templates/radionew/index.html
@@ -1,5 +1,17 @@
 {% extends "sidebar.html" %}
 
 {% block content %}
-<h2>Radio freies Krautchan</h2><p><em>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
+<h2>Radio freies Krautchan</h2>
+<table>
+<tbody>
+{% for entry in news %}
+<tr>
+<td><b>{{ entry.description }}</b> {{ entry.user }} {{ entry.time }}</td>
+</tr>
+<tr>
+<td>{{ entry.text }}</td>
+</tr>
+{% endfor %}
+</tbody>
+</table>
 {% endblock %}
