--- a/var/templates/radionew/sidebar-user.html
+++ b/var/templates/radionew/sidebar-user.html
@@ -9,7 +9,7 @@ block.super
 	<h3>Einstellungen</h3>
 		<ul>
 			<li><a href="settings.php">Benutzereinstellungen</a></li>
-			<li>Sendungseinstellungen</li>
+			<li><a href="showsettings.php">Sendungseinstellungen</a></li>
 			<!--<li>Statistiken</li>-->
 		</ul>
 	</div>
