ich müsste mal aufräumen :D
auch: filter übersetzt (so gut es geht)

--- a/var/templates/radionew/index.html
+++ b/var/templates/radionew/index.html
@@ -9,7 +9,7 @@
 <td><b>{{ entry.description }}</b> {{ entry.user }} {{ entry.time }}</td>
 </tr>
 <tr>
-<td>{{ entry.text }}</td>
+<td>{{ entry.text | safe}}</td>
 </tr>
 {% endfor %}
 </tbody>
