ein bug in h2o gefixt, broadcasts müssen besser geplant werden :(

--- a/var/templates/radionew/broadcasts-week.html
+++ b/var/templates/radionew/broadcasts-week.html
@@ -5,10 +5,8 @@
 <tr><td>&nbsp;</td><td width="13%">Montag</td><td width="13%">Dienstag</td><td width="13%">Mittwoch</td><td width="13%">Donnerstag</td><td width="13%">Freitag</td><td width="13%">Samstag</td><td width="13%">Sonntag</td></tr>
 {% for index, time in calendar %}
 <tr>
+    <td>&nbsp;</td>
     {% for index, day in time %}
-        {% if index == 'name' %}
-            <td>{{ day }}</td>
-        {% else %}
 	    <td {% if day.size > 1 %}rowspan={{ day.size }} {% endif %} class="{{ day.type }}">
 	    {% if day.count > day.size %}
 		    {{day.count}}&nbsp;Sendungen
@@ -22,7 +20,6 @@
 			{% endif %}
 	    {% endif %}
 	    </td>
-	    {% endif%}
     {%endfor%}
 </tr>
 {% endfor %}
