--- a/var/templates/radionew/broadcasts-week.html
+++ b/var/templates/radionew/broadcasts-week.html
@@ -5,9 +5,11 @@
 <tr><td>&nbsp;</td><td width="13%">Montag</td><td width="13%">Dienstag</td><td width="13%">Mittwoch</td><td width="13%">Donnerstag</td><td width="13%">Freitag</td><td width="13%">Samstag</td><td width="13%">Sonntag</td></tr>
 {% for index, time in calendar %}
 <tr>
-    <td>&nbsp;</td>
     {% for index, day in time %}
-	    <td {% if day.size > 1 %}rowspan={{ day.size }} {% endif %} class="{{ day.type }}">
+        {% if index == 0 %}
+            <td>{{ day.tname }}</td>
+        {% endif %}
+	    <td id="t{{day.tid}}" {% if day.ids %}shows="{{day.ids}}"{% endif %} {% if day.size > 1 %}rowspan={{ day.size }} {% endif %} class="{{ day.type }}">
 	    {% if day.count > day.size %}
 		    {{day.count}}&nbsp;Sendungen
 	    {% else %}
@@ -25,4 +27,15 @@
 {% endfor %}
 </bp:foreach>
 </table>
+<script type="text/javascript" >
+document.observe('dom:loaded', function(){
+	$$('td[shows]').each(function(element){
+		new Tip(element, {
+		    ajax: {
+			  url: '{{ WEBROOT }}api/site/show.php?id='+element.getAttribute("shows")
+			  }
+		});
+	});
+});
+</script>
 {% endblock %}
