--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -4,11 +4,12 @@
     <title>Radio freies Krautchan :: {{ PAGETITLE }}   
     </title>    
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="{{ WEBROOT }}style.css" type="text/css" media="screen,projection" /> 
+    <link rel="stylesheet" href="{{ WEBROOT }}style.css" type="text/css" media="screen,projection" />
+    <link rel="stylesheet" href="{{ WEBROOT }}prototip.css" type="text/css" /> 
     <link rel="shortcut icon" href="{{ WEBROOT }}favicon.ico" type="image/x-icon" /> 
-	<!--<script src="js/prototype.js"></script>-->
-	<script src="{{ WEBROOT }}js/jquery.js"></script>
-	<script src="{{ WEBROOT }}js/rfk.js"></script>
+	<script src="{{ WEBROOT }}js/prototype.js"></script>
+	<script src="{{ WEBROOT }}js/scriptaculous.js"></script>
+	<script src="{{ WEBROOT }}js/prototip.js"></script>
   </head>  
   <body>    
     <div id="container">      
