--- a/var/templates/radionew/broadcasts-sb.html
+++ b/var/templates/radionew/broadcasts-sb.html
@@ -12,14 +12,14 @@ block.super
 <div class='infoblock'>
 <h3>Aktionen</h3>
 	<a href="javascript:addShow();" id="addshowlink">Sendung hinzuf&uuml;gen</a>
-	<div id="addshow" style="display:none;">
+	<div id="addshow" style="display:none;width:100%;">
 		<form>
 		<table>
-		<tr><td colspan=2>Sendung hinzuf&uuml;gen</td></tr>
-		<tr><td>Anfang</td><td>??:??</td></tr>
-		<tr><td>Ende</td><td>??:??</td></tr>
-		<tr><td colspan=2><input name="name" value="Name" /></td></tr>
-		<tr><td colspan=2><textarea name="desc" style="width:150px;">Beschreibung</textarea></td></tr>
+		<tr><td colspan=3>Sendung hinzuf&uuml;gen</td></tr>
+		<tr><td>Anfang</td><td><a class="abutton" href="javascript:newShowUp();">u</a><a class="abutton" href="javascript:newShowDown();">d</a></td><td><span id="showbegin">??:??</span></td></tr>
+		<tr><td>Ende</td><td><a class="abutton" href="javascript:newShowPlus();">+</a><a class="abutton" href="javascript:newShowMinus();">-</a></td><td><span id="showend">??:??</span></td></tr>
+		<tr><td colspan=3><input id="showname" name="name" value="" /></td></tr>
+		<tr><td colspan=3><textarea id="showdescription" name="desc" style="width:150px;"></textarea></td></tr>
 		<tr><td><a href="javascript:commitAddShow();" />eintragen</a></td><td><a href="javascript:abortAddShow();" />abbrechen</a></td></tr>
 		</table>
 		</form>
