--- a/www/style.css
+++ b/www/style.css
@@ -292,20 +292,13 @@ vertical-align: middle;
 	border-top: thin solid grey;
 	border-right: thin solid lightgrey;
 }
-.calendar-week .curr {
-	border: thin solid orange;
-}
-.calendar-week .done {
-	background-color: #f5f5f5;
-}
-.calendar-week .show {
-	border: thin solid #0099ff;
-}
-
-.calendar-week .hour {
-	font-size: 8px;
-	border-left: thin solid lightgrey;
-	text-align: left;
+.abutton {
+    border: 1px solid lightgrey;
+    width: 10px;
+    height: 10px;
+    margin: 2px;
+    padding: 2px;
+	
 }
 .freetime-start, .freetime-mid, .freetime-end {
 	background-color: #A3FF99;
