--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -4,8 +4,8 @@
     <title>Radio freies Krautchan :: {{ PAGETITLE }}   
     </title>    
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="{{ WEBROOT }}style.css" type="text/css" media="screen,projection" />
-    <link rel="stylesheet" href="{{ WEBROOT }}prototip.css" type="text/css" /> 
+    <link rel="stylesheet" href="{{ WEBROOT }}css/style.css" type="text/css" media="screen,projection" />
+    <link rel="stylesheet" href="{{ WEBROOT }}css/prototip.css" type="text/css" /> 
     <link rel="shortcut icon" href="{{ WEBROOT }}favicon.ico" type="image/x-icon" /> 
 	<script src="{{ WEBROOT }}js/prototype.js"></script>
 	<script src="{{ WEBROOT }}js/scriptaculous.js"></script>
@@ -14,7 +14,7 @@
   <body>    
     <div id="container">      
       <div id="header">
-        <img src="{{ WEBROOT }}img/logo.png" alt="Logo" />      
+        <img src="{{ WEBROOT }}images/logo.png" alt="Logo" />      
       </div>      
       <div id="navigation">        
         <ul>
